src/components/intro/intro.css
.i {
    display: flex;
    height: 100vh;
}
  
.i-left {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
}

.i-right {
    flex: 1;
    position: relative; 
}

.i-left-wrapper {
    padding: 50px;
    height: 50%; 
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.i-intro {
    font-size: 30px;
    font-weight: 300;
}

.i-name {
    font-size: 45px;
}

.i-title {
    height: 50px;
    overflow: hidden;
}

/* skills wrapper */
.i-title-wrapper {
    height: 100%;
    animation: move 9s ease-in-out infinite alternate;
}

/* wrapper animation */
@keyframes move {
    25% {
        transform: translateY(-50px);
    }
    50% {
        transform: translateY(-100px);
    }
    75% {
        transform: translateY(-150px);
    }
    100% {
        transform: translateY(-200px);
    }
}

.i-title-item {
    height: 50px;
    font-size: 30px;
    font-weight: bold;
    color: #59b256;
    display: flex;
    align-items: center;
}

.i-scroll {
    width: 40px;
    height: 40px;
    position: absolute;
    bottom: 20px;
}

.i-img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    position: absolute;
}

.i-bg {
    /* using clip-path from bennettfeely.com */
    clip-path: polygon(100% 0%, 100% 51%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
    background-color: #59b256;
    width: 100%;
    height: 100%;
    /* positioning, parent '.i-right' must be relative */
    position: absolute;
    top: 0;
    right: 0;
}
  
.cv {
    width: max-content;
    display: inline-block;
    background-color: #59b256;
    padding: 0.75rem 1.2rem;
    border-radius: 0.4rem;
    cursor: pointer;
    color: #fff;
    text-decoration: none;
}


@media screen and (max-width: 1028px) {
    .i {
        flex-direction: column;
    }
    
    .i-left-wrapper {
        padding: 10px;
        align-items: center;
        justify-content: center;
        text-align: center;
        height: 70%;
    }
    
    .cv {
        margin: 10px;
    }
    
    .i-desc {
        display: none;
    }
    
}


@media screen and (max-width: 480px) {
    .i {
      flex-direction: column;
    }
  
    .i-left-wrapper {
      padding: 10px;
      align-items: center;
      height: 100%;
    }

    .i-intro {
      font-size: 20px;
      align-self: middle;
    }

    .i-name {
      font-size: 30px;
    }

    .i-title-item {
      font-size: 20px;
    }

    .cv {
        margin: 10px;
    }
  
    .i-desc, .i-right{
      display: none;
    }
    
}

